funciona todo, todos los elementos que debia corregir son responsive

--- a/index.html
+++ b/index.html
@@ -30,22 +30,19 @@
         <a class="navbar-brand" href="#">
           <img src="assets/img/stefanylogo.png" alt="..." width="100px" height="100px">
         </a>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
-                TEMPORADA
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#verano">VERANO</a></li>
-                <li><a class="dropdown-item" href="#otoño">OTOÑO</a></li>
-                <li><a class="dropdown-item" href="#invierno">INVIERNO</a></li>
-                <li><a class="dropdown-item" href="#primavera">PRIMAVERA</a></li>
-              </ul>
-            </li>
-          </ul>
-        </div>
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              TEMPORADA
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#verano">VERANO</a></li>
+              <li><a class="dropdown-item" href="#otoño">OTOÑO</a></li>
+              <li><a class="dropdown-item" href="#invierno">INVIERNO</a></li>
+              <li><a class="dropdown-item" href="#primavera">PRIMAVERA</a></li>
+            </ul>
+          </li>
+        </ul>
       </div>
       </div>
       <div class="shopp">
@@ -114,8 +111,8 @@
           <div class="botones">
             <div class="btn-group d-flex justify-content-center">
               <a href="./pages/detalles.html?id=1" data-id="1" class="btn btn-sm btn-secondary col-6">Detalles</a>
-              <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="1" data-nombre="Camisa Mila"
-                data-precio="4500">Agregar</a>
+              <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="1"
+                data-nombre="Camisa Mila" data-precio="4500">Agregar</a>
             </div>
           </div>
         </div>
@@ -129,8 +126,8 @@
           <div class="botones">
             <div class="btn-group d-flex justify-content-center">
               <a href="./pages/detalles.html?id=2" data-id="2" class="btn btn-sm btn-secondary col-6">Detalles</a>
-              <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="2" data-nombre="Conjunto Vertu"
-                data-precio="20000">Agregar</a>
+              <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="2"
+                data-nombre="Conjunto Vertu" data-precio="20000">Agregar</a>
             </div>
           </div>
         </div>
@@ -144,8 +141,8 @@
           <div class="botones">
             <div class="btn-group d-flex justify-content-center">
               <a href="./pages/detalles.html?id=3" data-id="3" class="btn btn-sm btn-secondary col-6">Detalles</a>
-              <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="3" data-nombre="Conjunto Sonora"
-                data-precio="12000">Agregar</a>
+              <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="3"
+                data-nombre="Conjunto Sonora" data-precio="12000">Agregar</a>
             </div>
           </div>
         </div>
@@ -160,8 +157,8 @@
           <div class="botones">
             <div class="btn-group d-flex justify-content-center">
               <a href="./pages/detalles.html?id=4" data-id="4" class="btn btn-sm btn-secondary col-6">Detalles</a>
-              <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="4" data-nombre="Vestido Candi"
-                data-precio="15000">Agregar</a>
+              <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="4"
+                data-nombre="Vestido Candi" data-precio="15000">Agregar</a>
             </div>
           </div>
         </div>
@@ -175,8 +172,8 @@
           <div class="botones">
             <div class="btn-group d-flex justify-content-center">
               <a href="./pages/detalles.html?id=5" data-id="5" class="btn btn-sm btn-secondary col-6">Detalles</a>
-              <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="5" data-nombre="Vestido Lili"
-                data-precio="15000">Agregar</a>
+              <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="5"
+                data-nombre="Vestido Lili" data-precio="15000">Agregar</a>
             </div>
           </div>
         </div>
@@ -190,7 +187,8 @@
           <div class="botones">
             <div class="btn-group d-flex justify-content-center">
               <a href="./pages/detalles.html?id=6" data-id="6" class="btn btn-sm btn-secondary col-6">Detalles</a>
-              <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="6" data-nombre="Vestido Pipa" data-precio="15000">Agregar</a>
+              <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="6"
+                data-nombre="Vestido Pipa" data-precio="15000">Agregar</a>
             </div>
           </div>
         </div>
@@ -232,9 +230,9 @@
           </div>
           <div class="botones">
             <div class="btn-group d-flex justify-content-center">
-              <a href="./pages/detalles.html?id=7" data-id="7"  class="btn btn-sm btn-secondary col-6">Detalles</a>
-              <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="7" data-nombre="Chaleco Baby"
-                data-precio="9000">Agregar</a>
+              <a href="./pages/detalles.html?id=7" data-id="7" class="btn btn-sm btn-secondary col-6">Detalles</a>
+              <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="7"
+                data-nombre="Chaleco Baby" data-precio="9000">Agregar</a>
             </div>
           </div>
         </div>
@@ -246,9 +244,9 @@
           </div>
           <div class="botones">
             <div class="btn-group d-flex justify-content-center">
-              <a href="./pages/detalles.html?id=8" data-id="8"  class="btn btn-sm btn-secondary col-6">Detalles</a>
-              <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="8" data-nombre="Chaleco Kim"
-                data-precio="12000">Agregar</a>
+              <a href="./pages/detalles.html?id=8" data-id="8" class="btn btn-sm btn-secondary col-6">Detalles</a>
+              <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="8"
+                data-nombre="Chaleco Kim" data-precio="12000">Agregar</a>
             </div>
           </div>
         </div>
@@ -262,8 +260,8 @@
           <div class="botones">
             <div class="btn-group d-flex justify-content-center">
               <a href="./pages/detalles.html?id=9" data-id="9" class="btn btn-sm btn-secondary col-6">Detalles</a>
-              <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="9" data-nombre="Chaleco Vaquero"
-                data-precio="10000">Agregar</a>
+              <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="9"
+                data-nombre="Chaleco Vaquero" data-precio="10000">Agregar</a>
             </div>
           </div>
         </div>
@@ -279,8 +277,8 @@
           <div class="botones">
             <div class="btn-group d-flex justify-content-center">
               <a href="./pages/detalles.html?id=10" data-id="10" class="btn btn-sm btn-secondary col-6">Detalles</a>
-              <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="10" data-nombre="Chaleco Emilia"
-                data-precio="6600">Agregar</a>
+              <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="10"
+                data-nombre="Chaleco Emilia" data-precio="6600">Agregar</a>
             </div>
           </div>
         </div>
@@ -293,8 +291,8 @@
           <div class="botones">
             <div class="btn-group d-flex justify-content-center">
               <a href="./pages/detalles.html?id=11" data-id="11" class="btn btn-sm btn-secondary col-6">Detalles</a>
-              <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="11" data-nombre="Conjunto Ima"
-                data-precio="30000">Agregar</a>
+              <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="11"
+                data-nombre="Conjunto Ima" data-precio="30000">Agregar</a>
             </div>
           </div>
         </div>
@@ -308,8 +306,8 @@
           <div class="botones">
             <div class="btn-group d-flex justify-content-center">
               <a href="./pages/detalles.html?id=12" data-id="12" class="btn btn-sm btn-secondary col-6">Detalles</a>
-              <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="12" data-nombre="Sweater Jose"
-                data-precio="25000">Agregar</a>
+              <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="12"
+                data-nombre="Sweater Jose" data-precio="25000">Agregar</a>
             </div>
           </div>
         </div>
@@ -349,8 +347,8 @@
             <div class="botones">
               <div class="btn-group d-flex justify-content-center">
                 <a href="./pages/detalles.html?id=13" data-id="13" class="btn btn-sm btn-secondary col-6">Detalles</a>
-                <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="13" data-nombre="Tapado Catalina"
-                  data-precio="30000">Agregar</a>
+                <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="13"
+                  data-nombre="Tapado Catalina" data-precio="30000">Agregar</a>
               </div>
             </div>
           </div>
@@ -364,8 +362,8 @@
             <div class="botones">
               <div class="btn-group d-flex justify-content-center">
                 <a href="./pages/detalles.html?id=14" data-id="14" class="btn btn-sm btn-secondary col-6">Detalles</a>
-                <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="14" data-nombre="Buzo Rose"
-                  data-precio="12000">Agregar</a>
+                <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="14"
+                  data-nombre="Buzo Rose" data-precio="12000">Agregar</a>
               </div>
             </div>
           </div>
@@ -381,8 +379,8 @@
             <div class="botones">
               <div class="btn-group d-flex justify-content-center">
                 <a href="./pages/detalles.html?id=15" data-id="15" class="btn btn-sm btn-secondary col-6">Detalles</a>
-                <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="15" data-nombre="Buzo Cele"
-                  data-precio="12000">Agregar</a>
+                <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="15"
+                  data-nombre="Buzo Cele" data-precio="12000">Agregar</a>
               </div>
             </div>
           </div>
@@ -398,8 +396,8 @@
             <div class="botones">
               <div class="btn-group d-flex justify-content-center">
                 <a href="./pages/detalles.html?id=16" data-id="16" class="btn btn-sm btn-secondary col-6">Detalles</a>
-                <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="16" data-nombre="Tapado Bora"
-                  data-precio="30000">Agregar</a>
+                <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="16"
+                  data-nombre="Tapado Bora" data-precio="30000">Agregar</a>
               </div>
             </div>
           </div>
@@ -413,8 +411,8 @@
             <div class="botones">
               <div class="btn-group d-flex justify-content-center">
                 <a href="./pages/detalles.html?id=17" data-id="17" class="btn btn-sm btn-secondary col-6">Detalles</a>
-                <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="17" data-nombre="Tapado Nina"
-                  data-precio="30000">Agregar</a>
+                <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="17"
+                  data-nombre="Tapado Nina" data-precio="30000">Agregar</a>
               </div>
             </div>
           </div>
@@ -429,8 +427,8 @@
             <div class="botones">
               <div class="btn-group d-flex justify-content-center">
                 <a href="./pages/detalles.html?id=18" data-id="18" class="btn btn-sm btn-secondary col-6">Detalles</a>
-                <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="18" data-nombre="Tapado Lola"
-                  data-precio="30000">Agregar</a>
+                <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="18"
+                  data-nombre="Tapado Lola" data-precio="30000">Agregar</a>
               </div>
             </div>
           </div>
@@ -472,8 +470,8 @@
         <div class="botones">
           <div class="btn-group d-flex justify-content-center">
             <a href="./pages/detalles.html?id=19" data-id="19" class="btn btn-sm btn-secondary col-6">Detalles</a>
-            <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="19" data-nombre="Vestido Bamba"
-              data-precio="19000">Agregar</a>
+            <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="19"
+              data-nombre="Vestido Bamba" data-precio="19000">Agregar</a>
           </div>
         </div>
       </div>
@@ -487,8 +485,8 @@
         <div class="botones">
           <div class="btn-group d-flex justify-content-center">
             <a href="./pages/detalles.html?id=20" data-id="20" class="btn btn-sm btn-secondary col-6">Detalles</a>
-            <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="19" data-id="20" data-nombre="Monito Luna"
-              data-precio="22000">Agregar</a>
+            <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="19" data-id="20"
+              data-nombre="Monito Luna" data-precio="22000">Agregar</a>
           </div>
         </div>
       </div>
@@ -503,8 +501,8 @@
         <div class="botones">
           <div class="btn-group d-flex justify-content-center">
             <a href="./pages/detalles.html?id=21" data-id="21" class="btn btn-sm btn-secondary col-6">Detalles</a>
-            <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="19" data-id="21" data-nombre="Conjunto Petra"
-              data-precio="35000">Agregar</a>
+            <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="19" data-id="21"
+              data-nombre="Conjunto Petra" data-precio="35000">Agregar</a>
           </div>
         </div>
       </div>
@@ -519,8 +517,8 @@
         <div class="botones">
           <div class="btn-group d-flex justify-content-center">
             <a href="./pages/detalles.html?id=22" data-id="22" class="btn btn-sm btn-secondary col-6">Detalles</a>
-            <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="19" data-id="22" data-nombre="Vestido Mara"
-              data-precio="10000">Agregar</a>
+            <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="19" data-id="22"
+              data-nombre="Vestido Mara" data-precio="10000">Agregar</a>
           </div>
         </div>
       </div>
@@ -534,8 +532,8 @@
         <div class="botones">
           <div class="btn-group d-flex justify-content-center">
             <a href="./pages/detalles.html?id=23" data-id="23" class="btn btn-sm btn-secondary col-6">Detalles</a>
-            <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="23" data-nombre="Remera Berta"
-              data-precio="15000">Agregar</a>
+            <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="23"
+              data-nombre="Remera Berta" data-precio="15000">Agregar</a>
           </div>
         </div>
       </div>
@@ -549,8 +547,8 @@
         <div class="botones">
           <div class="btn-group d-flex justify-content-center">
             <a href="./pages/detalles.html?id=24" data-id="24" class="btn btn-sm btn-secondary col-6">Detalles</a>
-            <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="24" data-nombre="Falda Rocio"
-              data-precio="14000">Agregar</a>
+            <a href="#" class="btn input agregar-carrito btn-sm btn-primary col-6" data-id="24"
+              data-nombre="Falda Rocio" data-precio="14000">Agregar</a>
           </div>
         </div>
       </div>
